@@ -126,6 +126,27 @@ VECTOR:
          igraph_vector_destroy(&%C%); \
          IGRAPH_FINALLY_CLEAN(1);
 
+VECTOR_BOOL:
+  CTYPE: igraph_vector_bool_t
+  CALL: &%C%
+  INCONV:
+    IN: R_SEXP_to_vector_bool(%I%, &%C%);
+    OUT: if (0 != igraph_vector_bool_init(&%C%, 0)) { \
+           igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM); \
+         } \
+         IGRAPH_FINALLY(igraph_vector_bool_destroy, &%C%);
+    INOUT: if (0 != R_SEXP_to_vector_bool_copy(%I%, &%C%)) { \
+           igraph_error("", __FILE__, __LINE__, IGRAPH_ENOMEM); \
+         } \
+         IGRAPH_FINALLY(igraph_vector_bool_destroy, &%C%);
+  OUTCONV:
+    OUT: PROTECT(%I%=R_igraph_vector_bool_to_SEXP(&%C%)); \
+         igraph_vector_bool_destroy(&%C%); \
+         IGRAPH_FINALLY_CLEAN(1);
+    INOUT: PROTECT(%I%=R_igraph_vector_bool_to_SEXP(&%C%)); \
+         igraph_vector_bool_destroy(&%C%); \
+         IGRAPH_FINALLY_CLEAN(1);
+
 VECTORLIST:
   CTYPE: igraph_vector_ptr_t
   CALL: &%C%
@@ -256,7 +277,7 @@ ARRAY3_OR_0:
 
 
 ##################################
-# Some vertices of a graph
+# Some vertices/edges of a graph
 
 VERTEXSET:
   CTYPE: igraph_vs_t
@@ -264,6 +285,13 @@ VERTEXSET:
     IN: R_SEXP_to_igraph_vs(%I%, &%C1%, &%C%);
   OUTCONV:
     IN: igraph_vs_destroy(&%C%);
+
+EDGESET:
+  CTYPE: igraph_es_t
+  INCONV:
+    IN: R_SEXP_to_igraph_es(%I%, &%C1%, &%C%);
+  OUTCONV:
+    IN: igraph_es_destroy(&%C%);
 
 ##################################
 # NULL, this is supplied as an argument
